fixed the footer alignment

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -21,3 +21,6 @@
 
     font-weight: 600;
   }
+  .copyright {
+  margin-left: auto; margin-right: auto;
+  }
