--- a/src/styles.css
+++ b/src/styles.css
@@ -23,10 +23,6 @@
       padding: 8px 8px;
     }
 
-    .spacer {
-      flex: 1;
-    }
-
   a,
   a:visited,
   a:hover {
